# PoorMansHuffman

./: CMakeLists.txt  LICENSE  readme.md
Source/: Decoder.cpp  Encoder.cpp
Source/Libraries/CompressionLib/: CMakeLists.txt  ERRHAND.C  ERRHAND.h  bitio.cpp  bitio.h  huffman.cpp  huffman.h
